caracteristicas agregadas. Licencia agregada.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/63d4975176.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/site.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
             <a href="#">Inicio</a>
             <a href="#">Nosotros</a>
             <a href="#">Clientes</a>
-            <a href="#">Contactos</a>
+            <a href="#">Contacto</a>
         </nav>
     </header>
     <div class="hero">
@@ -92,6 +93,11 @@
                 </div>
             </form>
         </section>
+    </div>
+    <div class="pre-byJG">
+        <a href="/" class="byJG">
+            <div class="image"></div> Jared Glez.
+        </a>
     </div>
 </body>
 
